--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "nx": "nx",
     "start": "ng serve",
+    "start:be": "ng serve --project api",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
