--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nx": "nx",
     "start": "ng serve",
     "start:be": "ng serve --project api",
+    "start:pl": "nodemon --config apps/playground/nodemon.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -69,9 +70,10 @@
     "eslint": "6.1.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
+    "nodemon": "^1.19.3",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.4.1",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5"
   }
