ref: rename cammands serving projects

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "ng": "ng",
     "nx": "nx",
     "start": "ng serve",
-    "start:be": "ng serve --project api",
-    "start:pl": "nodemon --config apps/playground/nodemon.json",
+    "serve:be": "ng serve --project api",
+    "serve:cl": "ng serve --project client",
+    "serve:pl": "nodemon --config apps/playground/nodemon.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
