pin versions & use npm

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "version": 1,
+  "cli": {
+    "packageManager": "npm"
+  },
   "projects": {
     "client": {
       "projectType": "application",
