--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.9",
+    "@angular/cdk": "~8.2.2",
     "@angular/common": "8.2.9",
     "@angular/compiler": "8.2.9",
     "@angular/core": "8.2.9",
     "@angular/forms": "8.2.9",
+    "@angular/material": "^8.2.2",
     "@angular/platform-browser": "8.2.9",
     "@angular/platform-browser-dynamic": "8.2.9",
     "@angular/router": "8.2.9",
@@ -47,6 +49,7 @@
     "@nrwl/angular": "8.6.0",
     "core-js": "2.5.4",
     "faker": "4.1.0",
+    "hammerjs": "^2.0.8",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.5.3",
     "zone.js": "0.9.1"
