--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hammerjs": "^2.0.8",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.5.3",
+    "typeface-roboto": "0.0.75",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
