--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             "polyfills": "apps/client/src/polyfills.ts",
             "tsConfig": "apps/client/tsconfig.app.json",
             "aot": false,
-            "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
+            "assets": ["apps/client/src/favicon.png", "apps/client/src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/client/src/styles.scss"
