--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx",
     "nx": "nx",
     "start": "ng serve",
     "serve:be": "ng serve --project api",
@@ -28,7 +28,8 @@
     "update:check": "ng update",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
@@ -43,10 +44,10 @@
     "@angular/platform-browser-dynamic": "11.0.0",
     "@angular/router": "11.0.0",
     "@nestjs-addons/in-memory-db": "1.7.4",
-    "@nestjs/common": "6.8.2",
-    "@nestjs/core": "6.8.2",
-    "@nestjs/platform-express": "6.8.2",
-    "@nrwl/angular": "8.6.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nrwl/angular": "10.4.2",
     "core-js": "2.5.4",
     "faker": "4.1.0",
     "reflect-metadata": "0.1.13",
@@ -59,23 +60,26 @@
     "@angular/cli": "11.0.1",
     "@angular/compiler-cli": "11.0.0",
     "@angular/language-service": "11.0.0",
-    "@nestjs/schematics": "6.3.0",
-    "@nestjs/testing": "6.2.4",
-    "@nrwl/cypress": "8.6.0",
-    "@nrwl/jest": "8.6.0",
-    "@nrwl/nest": "8.6.0",
-    "@nrwl/node": "8.6.0",
-    "@nrwl/workspace": "8.6.0",
-    "@types/jest": "24.0.9",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@nrwl/cli": "10.4.2",
+    "@nrwl/cypress": "10.4.2",
+    "@nrwl/jest": "10.4.2",
+    "@nrwl/nest": "10.4.2",
+    "@nrwl/node": "10.4.2",
+    "@nrwl/tao": "10.4.2",
+    "@nrwl/workspace": "10.4.2",
+    "@types/jest": "26.0.8",
     "@types/node": "8.9.4",
     "codelyzer": "6.0.1",
     "dotenv": "6.2.0",
-    "eslint": "6.1.0",
-    "jest": "24.1.0",
-    "jest-preset-angular": "7.0.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
     "nodemon": "1.19.3",
-    "prettier": "1.18.2",
-    "ts-jest": "24.0.0",
+    "prettier": "2.1.2",
+    "ts-jest": "26.4.0",
     "ts-node": "8.4.1",
     "tslint": "6.1.3",
     "typescript": "4.0.5"
