chore: reduce amount of commands

--- a/package.json
+++ b/package.json
@@ -12,29 +12,10 @@
     "ng": "nx",
     "nx": "nx",
     "start": "nx run-many --target=serve --projects=client,api --parallel",
-    "serve:be": "ng serve --project api",
-    "serve:cl": "ng serve --project client",
-    "serve:pl": "nodemon --config apps/playground/nodemon.json",
-    "build": "ng build",
+    "start: client": "ng serve --project client",
+    "start:api": "ng serve --project api",
+    "start:playground": "nodemon --config apps/playground/nodemon.json",
     "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
-    "update:check": "ng update",
-    "workspace-schematic": "nx workspace-schematic",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "dependencies": {
