chore: update to nx 12

--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "start:api": "ng serve --project api",
     "start:playground": "nodemon --config apps/playground/nodemon.json",
     "test": "ng test",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main"
   },
   "dependencies": {
-    "@angular/animations": "11.0.0",
+    "@angular/animations": "11.2.11",
     "@angular/cdk": "~11.0.0",
-    "@angular/common": "11.0.0",
-    "@angular/compiler": "11.0.0",
-    "@angular/core": "11.0.0",
-    "@angular/forms": "11.0.0",
+    "@angular/common": "11.2.11",
+    "@angular/compiler": "11.2.11",
+    "@angular/core": "11.2.11",
+    "@angular/forms": "11.2.11",
     "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "11.0.0",
-    "@angular/platform-browser-dynamic": "11.0.0",
-    "@angular/router": "11.0.0",
+    "@angular/platform-browser": "11.2.11",
+    "@angular/platform-browser-dynamic": "11.2.11",
+    "@angular/router": "11.2.11",
     "@nestjs-addons/in-memory-db": "1.7.4",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nrwl/angular": "10.4.2",
+    "@nrwl/angular": "12.0.8",
     "core-js": "2.5.4",
     "faker": "4.1.0",
     "reflect-metadata": "0.1.13",
@@ -42,32 +42,32 @@
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.1",
-    "@angular/cli": "11.0.1",
-    "@angular/compiler-cli": "11.0.0",
-    "@angular/language-service": "11.0.0",
+    "@angular-devkit/build-angular": "0.1102.10",
+    "@angular/cli": "11.2.10",
+    "@angular/compiler-cli": "11.2.11",
+    "@angular/language-service": "11.2.11",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "10.4.2",
-    "@nrwl/cypress": "10.4.2",
-    "@nrwl/jest": "10.4.2",
-    "@nrwl/nest": "10.4.2",
-    "@nrwl/node": "10.4.2",
-    "@nrwl/tao": "10.4.2",
-    "@nrwl/workspace": "10.4.2",
+    "@nrwl/cli": "12.0.8",
+    "@nrwl/cypress": "12.0.8",
+    "@nrwl/jest": "12.0.8",
+    "@nrwl/nest": "12.0.8",
+    "@nrwl/node": "12.0.8",
+    "@nrwl/tao": "12.0.8",
+    "@nrwl/workspace": "12.0.8",
     "@types/jest": "26.0.8",
-    "@types/node": "8.9.4",
+    "@types/node": "14.14.33",
     "codelyzer": "6.0.1",
-    "dotenv": "6.2.0",
-    "eslint": "6.8.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
+    "jest-preset-angular": "8.3.2",
     "nodemon": "1.19.3",
-    "prettier": "2.1.2",
+    "prettier": "2.2.1",
     "ts-jest": "26.4.0",
-    "ts-node": "8.4.1",
+    "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.5"
+    "typescript": "4.1.4"
   }
 }
