--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "core-js": "2.5.4",
     "faker": "4.1.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.0.0-rc.3",
+    "rxjs": "7.0.0",
     "typeface-roboto": "0.0.75",
     "zone.js": "0.10.3"
   },
