chore: update typescript to get RxJS 7 to work

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,5 +19,8 @@
       "@rxjs-dos/api-interfaces": ["libs/api-interfaces/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp"],
+  "angularCompilerOptions": {
+    "disableTypeScriptVersionCheck": true
+  }
 }
