--- a/package.json
+++ b/package.json
@@ -19,55 +19,55 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main"
   },
   "dependencies": {
-    "@angular/animations": "11.2.11",
-    "@angular/cdk": "11.2.10",
-    "@angular/common": "11.2.11",
-    "@angular/compiler": "11.2.11",
-    "@angular/core": "11.2.11",
-    "@angular/forms": "11.2.11",
-    "@angular/material": "11.2.10",
-    "@angular/platform-browser": "11.2.11",
-    "@angular/platform-browser-dynamic": "11.2.11",
-    "@angular/router": "11.2.11",
-    "@nestjs-addons/in-memory-db": "1.7.4",
+    "@angular/animations": "12.2.3",
+    "@angular/cdk": "12.2.3",
+    "@angular/common": "12.2.3",
+    "@angular/compiler": "12.2.3",
+    "@angular/core": "12.2.3",
+    "@angular/forms": "12.2.3",
+    "@angular/material": "12.2.3",
+    "@angular/platform-browser": "12.2.3",
+    "@angular/platform-browser-dynamic": "12.2.3",
+    "@angular/router": "12.2.3",
+    "@nestjs-addons/in-memory-db": "3.0.3",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nrwl/angular": "12.0.8",
+    "@nrwl/angular": "12.8.0",
     "core-js": "2.5.4",
     "faker": "4.1.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.0.0",
+    "rxjs": "6.5.3",
     "typeface-roboto": "0.0.75",
-    "zone.js": "0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.10",
-    "@angular/cli": "11.2.10",
-    "@angular/compiler-cli": "11.2.11",
-    "@angular/language-service": "11.2.11",
+    "@angular-devkit/build-angular": "12.1.4",
+    "@angular/cli": "12.1.4",
+    "@angular/compiler-cli": "12.2.3",
+    "@angular/language-service": "12.2.3",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.0.8",
-    "@nrwl/cypress": "12.0.8",
-    "@nrwl/jest": "12.0.8",
-    "@nrwl/nest": "12.0.8",
-    "@nrwl/node": "12.0.8",
-    "@nrwl/tao": "12.0.8",
-    "@nrwl/workspace": "12.0.8",
+    "@nrwl/cli": "12.8.0",
+    "@nrwl/cypress": "12.8.0",
+    "@nrwl/jest": "12.8.0",
+    "@nrwl/nest": "12.8.0",
+    "@nrwl/node": "12.8.0",
+    "@nrwl/tao": "12.8.0",
+    "@nrwl/workspace": "12.8.0",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "codelyzer": "6.0.1",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.22.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
+    "jest": "27.0.3",
+    "jest-preset-angular": "9.0.3",
     "nodemon": "1.19.3",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "prettier": "2.3.2",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.2.4"
+    "typescript": "4.3.5"
   }
 }
