--- a/package.json
+++ b/package.json
@@ -15,59 +15,55 @@
     "start:client": "ng serve --project client",
     "start:api": "ng serve --project api",
     "start:playground": "nodemon --config apps/playground/nodemon.json",
-    "test": "ng test",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main"
+    "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "12.2.3",
-    "@angular/cdk": "12.2.3",
-    "@angular/common": "12.2.3",
-    "@angular/compiler": "12.2.3",
-    "@angular/core": "12.2.3",
-    "@angular/forms": "12.2.3",
-    "@angular/material": "12.2.3",
-    "@angular/platform-browser": "12.2.3",
-    "@angular/platform-browser-dynamic": "12.2.3",
-    "@angular/router": "12.2.3",
+    "@angular/animations": "19.0.4",
+    "@angular/cdk": "19.0.3",
+    "@angular/common": "19.0.4",
+    "@angular/compiler": "19.0.4",
+    "@angular/core": "19.0.4",
+    "@angular/forms": "19.0.4",
+    "@angular/material": "19.0.3",
+    "@angular/platform-browser": "19.0.4",
+    "@angular/platform-browser-dynamic": "19.0.4",
+    "@angular/router": "19.0.4",
     "@nestjs-addons/in-memory-db": "3.0.3",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nrwl/angular": "12.8.0",
-    "core-js": "2.5.4",
-    "faker": "4.1.0",
-    "reflect-metadata": "0.1.13",
+    "@nestjs/common": "10.2.3",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nrwl/angular": "19.8.4",
+    "faker": "^5.5.3",
     "rxjs": "7.3.0",
-    "typeface-roboto": "0.0.75",
-    "zone.js": "~0.11.4"
+    "typeface-roboto": "1.1.13",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.4",
-    "@angular/cli": "12.1.4",
-    "@angular/compiler-cli": "12.2.3",
-    "@angular/language-service": "12.2.3",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.8.0",
-    "@nrwl/cypress": "12.8.0",
-    "@nrwl/jest": "12.8.0",
-    "@nrwl/nest": "12.8.0",
-    "@nrwl/node": "12.8.0",
-    "@nrwl/tao": "12.8.0",
-    "@nrwl/workspace": "12.8.0",
-    "@types/jest": "26.0.8",
-    "@types/node": "14.14.33",
-    "codelyzer": "6.0.1",
-    "dotenv": "10.0.0",
-    "eslint": "7.22.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.3",
-    "nodemon": "1.19.3",
-    "prettier": "2.3.2",
-    "ts-jest": "27.0.3",
-    "ts-node": "9.1.1",
+    "@angular-devkit/build-angular": "19.0.5",
+    "@angular/cli": "19.0.5",
+    "@angular/compiler-cli": "19.0.4",
+    "@angular/language-service": "19.0.4",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.15",
+    "@nrwl/cli": "^15.9.7",
+    "@nrwl/cypress": "19.8.4",
+    "@nrwl/jest": "19.8.4",
+    "@nrwl/nest": "19.8.4",
+    "@nrwl/node": "19.8.4",
+    "@nrwl/tao": "19.8.4",
+    "@nrwl/workspace": "19.8.4",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.10.2",
+    "dotenv": "16.4.7",
+    "eslint": "9.16.0",
+    "eslint-plugin-cypress": "4.1.0",
+    "jest": "29.7.0",
+    "jest-preset-angular": "14.4.2",
+    "nodemon": "3.1.7",
+    "prettier": "3.4.2",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "5.7.2"
   }
 }
