--- a/apps/client/src/tsconfig.spec.json
+++ b/apps/client/src/tsconfig.spec.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "moduleResolution": "node10",
+    "target": "es2016",
     "types": ["jest", "node"]
   },
+  "files": ["src/test-setup.ts"],
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
