--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
   "name": "reactive-thinking-rxjs",
   "author": {
     "name": "Gregor Woiwode",
-    "email": "gregor.woiwode@co-IT.eu",
+    "email": "gregor.woiwode@gmail.com",
     "url": "https://twitter.com/GregOnNet"
   },
   "version": "1.0.0",
   "license": "MIT",
   "private": "true",
   "scripts": {
-    "ng": "nx",
     "nx": "nx",
     "start": "nx run-many --target=serve --projects=client,api --parallel",
-    "start:client": "ng serve --project client",
-    "start:api": "ng serve --project api",
-    "start:playground": "nodemon --config apps/playground/nodemon.json",
-    "test": "ng test"
+    "start:client": "nx run client:serve",
+    "start:api": "ng run serve api:serve",
+    "start:playground": "nodemon --config apps/playground/nodemon.json"
   },
   "dependencies": {
     "@angular/animations": "19.0.4",
@@ -52,6 +50,7 @@
     "@nrwl/node": "19.8.4",
     "@nrwl/tao": "19.8.4",
     "@nrwl/workspace": "19.8.4",
+    "@nx/eslint": "^20.2.2",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.2",
     "dotenv": "16.4.7",
@@ -60,6 +59,7 @@
     "jest": "29.7.0",
     "jest-preset-angular": "14.4.2",
     "nodemon": "3.1.7",
+    "nx": "20.2.2",
     "prettier": "3.4.2",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
