--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "nx": "nx",
     "start": "nx run-many --target=serve --projects=client,api --parallel",
     "start:client": "nx run client:serve",
-    "start:api": "ng run serve api:serve",
-    "start:playground": "nodemon --config apps/playground/nodemon.json"
+    "start:api": "ng run serve api:serve"
   },
   "dependencies": {
     "@angular/animations": "19.0.4",
@@ -58,7 +57,6 @@
     "eslint-plugin-cypress": "4.1.0",
     "jest": "29.7.0",
     "jest-preset-angular": "14.4.2",
-    "nodemon": "3.1.7",
     "nx": "20.2.2",
     "prettier": "3.4.2",
     "ts-jest": "29.2.5",
