--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -17,7 +17,7 @@
         "tsConfig": "apps/client/tsconfig.app.json",
         "assets": ["apps/client/src/favicon.png", "apps/client/src/assets"],
         "styles": [
-          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+          "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
           "apps/client/src/styles.scss"
         ],
         "scripts": []
