fix: correct packages

--- a/nx.json
+++ b/nx.json
@@ -55,12 +55,5 @@
       }
     }
   ],
-  "generators": {
-    "@nx/angular:application": {
-      "e2eTestRunner": "playwright",
-      "linter": "eslint",
-      "style": "css",
-      "unitTestRunner": "jest"
-    }
-  }
+  "generators": { }
 }
