--- a/package.json
+++ b/package.json
@@ -36,34 +36,51 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.5",
-    "@angular/cli": "19.0.5",
-    "@angular/compiler-cli": "19.0.4",
-    "@angular/language-service": "19.0.4",
-    "@nestjs/schematics": "10.2.3",
-    "@nestjs/testing": "10.4.15",
-    "@nrwl/cli": "^15.9.7",
-    "@nrwl/cypress": "19.8.4",
-    "@nrwl/jest": "19.8.4",
-    "@nrwl/nest": "19.8.4",
-    "@nrwl/node": "19.8.4",
-    "@nrwl/tao": "19.8.4",
-    "@nrwl/workspace": "19.8.4",
-    "@nx/eslint": "^20.2.2",
-    "@nx/eslint-plugin": "^20.2.2",
-    "@nx/webpack": "^20.2.2",
-    "@types/jest": "29.5.14",
-    "@types/node": "22.10.2",
+    "@angular-devkit/build-angular": "~19.0.0",
+    "@angular-devkit/core": "~19.0.0",
+    "@angular-devkit/schematics": "~19.0.0",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "~19.0.0",
+    "@angular/language-service": "~19.0.0",
+    "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx/angular": "20.2.2",
+    "@nx/devkit": "20.2.2",
+    "@nx/eslint": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/nest": "20.2.2",
+    "@nx/node": "20.2.2",
+    "@nx/playwright": "20.2.2",
+    "@nx/web": "20.2.2",
+    "@nx/webpack": "20.2.2",
+    "@nx/workspace": "20.2.2",
+    "@playwright/test": "^1.36.0",
+    "@schematics/angular": "~19.0.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/utils": "^8.13.0",
+    "angular-eslint": "^19.0.2",
     "dotenv": "16.4.7",
-    "eslint": "9.16.0",
-    "eslint-plugin-cypress": "4.1.0",
-    "jest": "29.7.0",
-    "jest-preset-angular": "14.4.2",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-preset-angular": "~14.4.0",
     "nx": "20.2.2",
-    "prettier": "3.4.2",
-    "ts-jest": "29.2.5",
-    "ts-node": "10.9.2",
-    "tslint": "6.1.3",
-    "typescript": "5.7.2"
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.13.0",
+    "webpack-cli": "^5.1.4"
   }
 }
