--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -48,6 +48,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "proxyConfig": "apps/client/proxy.config.json"
+      },
       "configurations": {
         "production": {
           "buildTarget": "client:build:production"
