--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/core": "^10.4.15",
     "@nestjs/platform-express": "^10.4.15",
     "@nrwl/angular": "19.8.4",
-    "faker": "^5.5.3",
+    "axios": "^1.6.0",
+    "@faker-js/faker": "9.3.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "7.8.1",
     "typeface-roboto": "1.1.13",
     "zone.js": "0.15.0"
@@ -66,7 +68,6 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.2",
-    "dotenv": "16.4.7",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^1.6.2",
