--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nx": "nx",
     "start": "nx run-many --target=serve --projects=client,api --parallel",
     "start:client": "nx run client:serve",
-    "start:api": "ng run serve api:serve"
+    "start:api": "ng run serve api:serve",
+    "start:playground": "nodemon --config apps/playground/nodemon.json"
   },
   "dependencies": {
     "@angular/animations": "19.0.4",
@@ -25,13 +26,13 @@
     "@angular/platform-browser": "19.0.4",
     "@angular/platform-browser-dynamic": "19.0.4",
     "@angular/router": "19.0.4",
+    "@faker-js/faker": "9.3.0",
     "@nestjs-addons/in-memory-db": "3.0.3",
     "@nestjs/common": "10.2.3",
     "@nestjs/core": "^10.4.15",
     "@nestjs/platform-express": "^10.4.15",
     "@nrwl/angular": "19.8.4",
     "axios": "^1.6.0",
-    "@faker-js/faker": "9.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.8.1",
     "typeface-roboto": "1.1.13",
@@ -75,6 +76,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "nodemon": "^3.1.7",
     "nx": "20.2.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
