--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nx": "nx",
     "start": "nx run-many --target=serve --projects=client,api --parallel",
     "start:client": "nx run client:serve",
-    "start:api": "ng run serve api:serve",
+    "start:api": "nx run api:serve",
     "start:playground": "nodemon --config apps/playground/nodemon.json"
   },
   "dependencies": {
